PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2008, PHP 5.2.7
- Reverted fix for bug #44197 due to behaviour change in minor version.
  (Felipe)

- Fixed security issues detailed in CVE-2008-2665 and CVE-2008-2666.
  (Christian Hoffmann)
- Fixed simplexml asXML() not to lose encoding when dumping entire document
  to file. (Ilia)
- Fixed a crash inside PDO when trying instantiate PDORow manually. (Felipe)
- Fixed build failure of ext/mysqli with libmysql 6.0 - missing rpl
  functions. (Andrey)
- Fixed a regression when using strip_tags() and < is within an attribute.
  (Scott)
- Fixed a crash on invalid method in ReflectionParameter constructor.
  (Christian Seiler)

- Fixed bug #45765 (ReflectionObject with default parameters of self::xxx cause
  an error). (Felipe)
- Fixed bug #45705 (rfc822_parse_adrlist() modifies passed address parameter).
  (Jani)
- Fixed bug #45691 (Some per-dir or runtime settings may leak into other
  requests). (Moriyoshi)
- Fixed bug #45581 (htmlspecialchars() double encoding &#x hex items). (Arnaud)
- Fixed bug #45568 (ISAPI doesn't properly clear auth_digest in header).
  (Patch by: navara at emclient dot com)
- Fixed bug #45556 (Return value from callback isn't freed). (Felipe)
- Fixed bug #45555 (Segfault with invalid non-string as 
  register_introspection_callback). (Christian Seiler)
- Fixed bug #45486 (mb_send_mail(); header 'Content-Type: text/plain; charset=' 
  parsing incorrect). (Felipe)
- Fixed bug #45485 (strip_tags and <?XML tag). (Felipe)
- Fixed bug #45460 (imap patch for fromlength fix in imap_headerinfo doesn't 
  accept lengths of 1024). (Felipe, andrew at lifescale dot com)
- Fixed bug #45449 (filesize() regression using ftp wrapper). 
  (crrodriguez at suse dot de)
- Fixed bug #45423 (fastcgi parent process doesn't invoke php_module_shutdown
  before shutdown) (basant dot kukreja at sun dot com)