@@ -4,6 +4,9 @@ PHP                                                                        NEWS
 - Reverted fix for bug #44197 due to behaviour change in minor version.
   (Felipe)
 
+- Added "PHP_INI_SCAN_DIR" environment variable which can be used to either
+  disable or change the compile time ini scan directory (FR 45114). (Jani)
+
 - Fixed security issues detailed in CVE-2008-2665 and CVE-2008-2666.
   (Christian Hoffmann)
 - Fixed simplexml asXML() not to lose encoding when dumping entire document
@@ -73,6 +76,8 @@ PHP                                                                        NEWS
   (Jani)
 - Fixed bug #43993 (mb_substr_count() behaves differently to substr_count() with
   overlapping needles). (Moriyoshi)
+- Fixed bug #42604 ("make test" fails with --with-config-file-scan-dir=path).
+  (Jani)
 - Fixed bug #41348 (OCI8: allow compilation with Oracle 8.1). (Chris Jones)
 
 01 May 2008, PHP 5.2.6
